Adição de páginas.

--- a/index.html
+++ b/index.html
@@ -127,6 +127,20 @@
     <p class="texto">Imagine que você é um Brasileiro de férias na Tailândia, enquanto a recepcionista do hotel talvez
       não possa responder à sua pergunta em português ou espanhol, é provável que ele possa responder à sua pergunta em
       inglês.</p>
+
+      <br>
+      <br>
+      <br>
+      <br>
+
+     <p class="texto">Vamos começar com a gramática, agora é só em inglês!!</p>
+        
+
+      <a href="grammar1.html">  <p class ="texto" >  Grammar 1 : Adjectives and prepositions  </p>  </a>   
+      <a href="grammar2.html">  <p class ="texto" >  Grammar 2 : Adjectives ending in '-ed' and '-ing'</p>  </a>  
+      <a href="grammar3.html">  <p class ="texto" >  Grammar 3 : Articles </p>  </a>  
+
+
     <br><br>
   </div>
 
@@ -142,6 +156,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
     crossorigin="anonymous"></script>
+
+
 </body>
 
 
