Footer e responsivo index e grammar terminados

--- a/grammar.html
+++ b/grammar.html
@@ -35,7 +35,7 @@
                   <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="grammar.html">Grammar</a>
+                  <a class="nav-link active" aria-current="page" href="http://127.0.0.1:5500/grammar.html">Grammar</a>
                 </li>
               </ul>
             </div>
@@ -48,6 +48,7 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
 
+        <!-- ------------------------------------------------ -->
         <button class="navbar-toggler" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -64,11 +65,11 @@
           </div>
           <div class="modal-body">
             <ul class="list-group list-group-flush">
-              <li class="list-group-item"><a href="index.html" class="btn">Home</a></li>
-              <li class="list-group-item">Grammar</li>
-              <li class="list-group-item"><a href="adj_pre.html" class="btn">Adjectives and Prepositions</a></li>
-              <li class="list-group-item"><a href="articles.html" class="btn">Articles</a></li>
-              <li class="list-group-item"><a href="past.html" class="btn">Past Continuous and Past Simple</a></li>
+              <li class="list-group-item">Home</li>
+              <li class="list-group-item">A second item</li>
+              <li class="list-group-item">A third item</li>
+              <li class="list-group-item">A fourth item</li>
+              <li class="list-group-item">And a fifth one</li>
             </ul>
           </div>
           <div class="modal-footer">
@@ -81,47 +82,64 @@
 
   <!-- ------------------------------------------------ -->
   <main>
+    <div class="row">
+      <div class="col-sm">
+        <div class="card">
+
+          <img src="imagens/verde.jpg" class="card-img-top">
+
+          <div class="card-body">
+            <h5 class="card-title"><strong>Adjectives and Prepositions</strong></h5>
+            <p class="card-text">Do you know how to use adjectives with prepositions like interested in or similar to?
+            </p>
+            <a href="adj_pre.html" class="btn btn-primary">Learn</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm">
+        <div class="card">
+
+          <img src="imagens/roxo.png" class="card-img-top">
+
+          <div class="card-body">
+            <h5 class="card-title"><strong>Articles</strong></h5>
+            <p class="card-text"> Do you know how to use adjectives with prepositions like interested in or similar
+              to?
+            </p>
+            <a href="articles.html" class="btn btn-primary">Learn</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-sm">
+        <div class="card">
+
+          <img src="imagens/amarelo.jpg" class="card-img-top">
+
+          <div class="card-body">
+            <h5 class="card-title"><strong>Past Continuous and Past Simple</strong></h5>
+            <p class="card-text">Do you know how to use adjectives with prepositions like interested in or similar to?
+            </p>
+            <a href="past.html" class="btn btn-primary">Learn</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </main>
-
+  <footer>
+    <div class="container-footer">
+      <div class="list-footer-item">
+        <p> Copyright © 2020 EnglishForAll. All Rights Reserved</p>
+      </div>
+    </div>
+  </footer>
 
   <!-- ------------------------------------------------------------------------------------------------------ -->
 
 
-  <div class="card">
 
-    <img src="imagens/verde.jpg" class="card-img-top">
-
-    <div class="card-body">
-      <h5 class="card-title"><strong>Adjectives and Prepositions</strong></h5>
-      <p class="card-text">Do you know how to use adjectives with prepositions like interested in or similar to?</p>
-      <a href="adj_pre.html" class="btn btn-primary">Learn</a>
-    </div>
-
-  </div>
-  <div class="card">
-
-    <img src="imagens/roxo.png" class="card-img-top">
-
-    <div class="card-body">
-      <h5 class="card-title"><strong>Articles</strong></h5>
-      <p class="card-text"><br> Do you know how to use adjectives with prepositions like interested in or similar to?
-      </p>
-      <a href="articles.html" class="btn btn-primary">Learn</a>
-    </div>
-
-  </div>
-  <div class="card">
-
-    <img src="imagens/amarelo.jpg" class="card-img-top">
-
-    <div class="card-body">
-      <h5 class="card-title"><strong>Past Continuous and Past Simple</strong></h5>
-      <p class="card-text">Do you know how to use adjectives with prepositions like interested in or similar to?</p>
-      <a href="past.html" class="btn btn-primary">Learn</a>
-    </div>
-
-  </div>
 
   <!-- -------------------------------------------------------------------- -->
   <script type="text/javascript">
