--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
 
 <body class="background">
-   <div class="loader hidden">
-      <img src="imagens/load.gif">
-   </div>
+
    <header>
+      <div class="loader hidden">
+         <img src="imagens/load.gif">
+      </div>
       <nav class="navbar navbar-light bg-light shadow">
          <div class="container-fluid">
             <span class="navbar-brand mb-0 h1">
@@ -183,19 +184,14 @@
       </section>
 
    </main>
-
    <footer>
-      <div style=" margin-top: 40px" class="container-footer">
-         <ul class="list-footer">
-            <li>
-               <div class="paragrafo list-footer-item">
-                  <p> Copyright © 2020 EnglishForAll. All Rights Reserved</p>
-               </div>
-            </li>
-         </ul>
-
+      <div class="container-footer">
+         <div class="list-footer-item">
+            <p> Copyright © 2020 EnglishForAll. All Rights Reserved</p>
+         </div>
       </div>
    </footer>
+
 
    <!-- ---------------------------------- SCRIPT ---------------------------------- -->
    <script type="text/javascript">
@@ -208,9 +204,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
       crossorigin="anonymous"></script>
+
 </body>
-
-
-
 
 </html>
