--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                            <a class="nav-link active" aria-current="page"
                               href="http://127.0.0.1:5500/grammar.html">Grammar</a>
                         </li>
+                        <li class="nav-item">
+                           <a class="nav-link active" aria-current="page" href="login.html">Login</a>
+                        </li>
                      </ul>
                   </div>
 
