--- a/login.html
+++ b/login.html
@@ -13,7 +13,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="./Styles/style-grammar.css">
+    <link rel="stylesheet" type="text/css" href="./Styles/style-index.css">
+    <link rel="stylesheet" type="text/css" href="./Styles/login-style.css">
 </head>
 
 
@@ -84,83 +85,23 @@
             </div>
         </div>
     </header>
-    <!-- ------------------------------------------------------------------------------------------------------ -->
-    <main>
-        <div>
-            <div class="grammar">
 
-                <h2 align="center" class="paragrafo"><strong>Grammar explanation</strong></h2>
-                <p class="texto"> <br><br> Here are some of the most important things to know about using articles.</p>
-
-                <p class="texto"><br><strong>Jobs</strong></p>
-                <p class="texto">When we say what people's jobs are, we usually use a/an.</p>
+    <div class="container-login">
+        <h1>Login</h1>
+        <form>
+            <div class="item-form">
+                <input type="text" id="username" name="username" placeholder="Username">
             </div>
-
-            <table class="table">
-                <tr>
-                    <th rowspan="3">A/AN</th>
-                    <td>I'm angry about the decision.He's an architect.</td>
-                <tr>
-                    <td>He's nervous about the presentation.</td>
-                </tr>
-                <tr>
-                    <td>She's excited about the new job.</td>
-                </tr>
-
-            </table>
-
-            <div class="grammar">
-
-                <p class="texto"><strong>Singular nouns</strong></p>
-                <p class="texto">Singular, countable nouns always have an article – a/an or the (or another determiner –
-                    my,
-                    your, this, that, etc.).</p>
-                <p class="texto">We use a/an – the indefinite article – when we talk about something for the first time,
-                    or
-                    something that is part of a group or type.</p>
-
-                <table class="table">
-                    <tr>
-                        <td>She has a university degree.</td>
-                    <tr>
-                        <td>It took me an hour to get home.</td>
-                    </tr>
-                </table>
-
-                <p class="texto">We use the – the definite article – when the listener already knows which thing we are
-                    talking about because it was mentioned before or because there's only one of them.</p>
-                <table class="table">
-                    <tr>
-                        <td>I'm going to take the dog for a walk.</td>
-                    <tr>
-                        <td>Have you seen the car key?</td>
-                    </tr>
-                </table>
-
+            <div class="item-form">
+                <input type="password" id="senha" name="senha" placeholder="Password">
             </div>
-
-            <div class="grammar">
-
-                <p class="texto"><strong>Things in general</strong></p>
-                <p class="texto">When we talk about things in general, we normally use a plural or uncountable noun with
-                    no
-                    article.</p>
-
-                <table class="table">
-                    <tr>
-                        <td>Birds eat worms.</td>
-                    <tr>
-                        <td>Water freezes at 0°C.</td>
-                    </tr>
-                </table>
-
-            </div>
-
-
-
+        </form>
+        <div class="button-container">
+            <button type="submit" class="button-login">Submit</button>
         </div>
-    </main>
+    </div>
 
+    <!-- ------------------------------------------------ -->
 
     <footer>
         <div class="container-footer">
@@ -169,6 +110,11 @@
             </div>
         </div>
     </footer>
+
+    <!-- ------------------------------------------------------------------------------------------------------ -->
+
+
+
 
     <!-- -------------------------------------------------------------------- -->
     <script type="text/javascript">
