Acrescimo de cadastro e mudança no header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width-Bootstree, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <meta name="author" content="Jorge Rodriguez, Felipe Dorado, Alexandre Nojosa">
+   <meta name="description" content="English">
+   <meta name="keywords" content="english, Grammar, Adjectives, Prepositions, Articles, Past Continuous, Past Simple">
+   <meta name="copyright" content="© 2021 UCB" />
    <title>English</title>
    <link rel="shortcut icon" href="imagens/uks.png">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -38,11 +42,11 @@
                   </li>
 
                   <li class="filho-nav-flex filho-hover">
-                     <a aria-current="page" href="login.html">SignIn</a>
+                     <a aria-current="page" href="login.html">Sign&nbspIn</a>
                   </li>
 
                   <li class="filho-nav-flex filho-hover">
-                     <a aria-current="page" href="#">SignUp</a>
+                     <a aria-current="page" href="signUp.html">Sign&nbspUp</a>
                   </li>
 
                   <li class="filho-nav-flex">
@@ -82,7 +86,7 @@
                      <li class="list-group-item"><a href="index.html" class="btn">Home</a></li>
                      <li class="list-group-item"><a href="grammar.html" class="btn">Grammar</a></li>
                      <li class="list-group-item"><a href="login.html" class="btn">SignIn</a></li>
-                     <li class="list-group-item"><a href="#" class="btn">SignUp</a></li>
+                     <li class="list-group-item"><a href="signUp.html" class="btn">SignUp</a></li>
                      <li class="list-group-item"><a href="adj_pre.html" class="btn">Adjectives and
                            Prepositions</a>
                      </li>
