--- a/signUp.html
+++ b/signUp.html
@@ -10,7 +10,7 @@
     <meta name="description" content="English">
     <meta name="keywords" content="english, Grammar, Adjectives, Prepositions, Articles, Past Continuous, Past Simple">
     <meta name="copyright" content="© 2021 UCB" />
-    <title>SignIn</title>
+    <title>CreateAcount</title>
     <link rel="shortcut icon" href="imagens/uks.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
@@ -18,7 +18,7 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./Styles/style-index.css">
-    <link rel="stylesheet" type="text/css" href="./Styles/login-style.css">
+    <link rel="stylesheet" type="text/css" href="./Styles/style-signup.css">
 </head>
 
 
@@ -107,20 +107,56 @@
 
     </header>
     <main>
-        <div class="container-login">
-            <h1>Login</h1>
+        <div class="container-cadastro">
+            <h1>Create account</h1>
             <form>
-                <div class="item-form">
-                    <input type="text" id="username" name="username" placeholder="Username">
-                </div>
-                <div class="item-form">
-                    <input type="password" id="senha" name="senha" placeholder="Password">
-                </div>
+                <ul class="container-form">
+
+                    <li>
+                        <div class="item-form">
+                            <input type="text" id="first_name" name="first_name" placeholder="First name*"
+                                required="required">
+                            <input type="text" id="last_name" name="last_name" placeholder="Last name*"
+                                required="required">
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="item-form">
+
+                            <input type="email" id="email_cadastro" name="email_cadastro" placeholder="Email*"
+                                required="required">
+                            <input type="text" id="city_cadastro" name="city_cadastro" placeholder="City">
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="item-form">
+
+                            <input type="list" list="level_english" name="level_english" placeholder="Switch your level"
+                                required="required">
+                            <datalist id="level_english">
+                                <option value="advanced"></option>
+                                <option value="Middle"></option>
+                                <option value="Beginner"></option>
+                            </datalist>
+                            <div class="container-btn">
+                                <button type="submit" class="button-cadastrar">Create!</button>
+                            </div>
+
+                        </div>
+                    </li>
+                    <li>
+                        <div class class="form-checkbox">
+                            <input style="width: 15px; padding:5px;" type="checkbox" id="aceitar_termos"
+                                name="aceitar_termos">
+                            <label for="aceitar_termos">Aceitar termos de uso<a href="#"> Ler mais...</a></label>
+                        </div>
+                    </li>
+
+                </ul>
+
             </form>
-            <div class="button-container">
-                <button type="submit" class="button-login">Submit</button>
-            </div>
-            <a class="set-link-login" href="#">Don't have a login yet? Sign Up Now!</a>
         </div>
 
     </main>
