--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                   <ul class="list-group list-group-flush">
                      <li class="list-group-item"><a href="index.html" class="btn">Home</a></li>
                      <li class="list-group-item"><a href="grammar.html" class="btn">Grammar</a></li>
-                     <li class="list-group-item"><a href="login.html" class="btn">SignIn</a></li>
-                     <li class="list-group-item"><a href="signUp.html" class="btn">SignUp</a></li>
+                     <li class="list-group-item"><a href="login.html" class="btn">Sign&nbspIn</a></li>
+                     <li class="list-group-item"><a href="signUp.html" class="btn">Sign&nbspUp</a></li>
                      <li class="list-group-item"><a href="adj_pre.html" class="btn">Adjectives and
                            Prepositions</a>
                      </li>
