--- a/adj_pre.html
+++ b/adj_pre.html
@@ -18,6 +18,7 @@
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="./Styles/style-grammar.css">
+    <link rel="stylesheet" type="text/css" href="./Styles/login-style.css">
 </head>
 
 
@@ -204,8 +205,40 @@
             </table>
 
 
+            <div class="grammar">
+                <p class="texto"><strong>Grammar Test</strong></p>
+                <p class="texto"><strong>Choose the correct word.</strong></p>
 
+                <p class="texto"><br>1 - She's interested ___ buying the flat.</p>
+                <input type="radio" value="About">
+                <label class="texto" for="html">About</label><br>
+                <input type="radio" value="In">
+                <label class="texto" for="html">In</label><br>
+                <input type="radio" value="On">
+                <label class="texto" for="html">On</label><br>
 
+                <p class="texto"><br>2 - I'm a bit nervous ___ going somewhere so different.</p>
+                <input type="radio" value="About">
+                <label class="texto" for="html">About</label><br>
+                <input type="radio" value="Of">
+                <label class="texto" for="html">Of</label><br>
+                <input type="radio" value="To">
+                <label class="texto" for="html">To</label><br>
+
+                
+                <br>
+                <label class="texto"> <strong>3 - Put the following questions in order.  </strong> </label>
+                <p class="texto">a) this bag belong who to does ?</p>
+                <textarea  style="width: 35%" ></textarea>
+                <p class="texto">b) for looking who were you ?</p>
+                <textarea  style="width: 35%" ></textarea>
+                <p class="texto">c) in which group you are ?</p>
+                <textarea  style="width: 35%" ></textarea>
+                <div class="button-container">
+                    <button type="submit" class="button-login">Finish</button>
+                </div> 
+            </div>
+            
 
         </div>
     </main>
